Include Copilot suggestions